# polymarket-mm-bot

./: .gitignore  README.md  deploy.sh  polymarket-mm.service
backend/: .env.example  .gitignore  Cargo.toml
backend/data/: live_paper_state.json  live_paper_trades.jsonl  v3_state.json  v3_trades.jsonl
backend/src/: bankroll.rs  config.rs  dashboard.rs  execution.rs  inventory.rs  main.rs  signal.rs  types.rs
backend/src/connectors/: binance.rs  mod.rs  polymarket.rs
backend/src/engines/: mod.rs  pricing.rs  radar.rs  risk.rs  volatility.rs
backend/src/roles/: executor.rs  mod.rs  radar.rs
frontend/: app.js  index.html  style.css
